# I-like-Piano

./: README.md  main.cpp  mainwindow.cpp  mainwindow.ui
src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  midi_main.cpp  midi_main.h
tools/libremidi-test/: CMakeLists.txt  main.cpp
